[package]
name = "mainstay-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = { version = "0.5.1", features = ["secp256k1"] }
bitcoin = "0.31.0"
btc-transaction-utils = "0.9.0"
hex = "0.4.3"
secp256k1 = "0.28.0"
serde_json = "1.0.108"
